<resources>
    <string name="app_name">Exam CIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile_mhs">Profil Mahasiswa</string>
    <string name="exam">Ujian</string>
    <string name="title_login">EXAM CIC</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login_page">Login Page!</string>
    <string name="title_login_page">Please input your username &amp; password to enter the main page.</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="nim">NIM</string>
    <string name="example_nim">2015142024</string>
    <string name="name">Nama Mahasiswa</string>
    <string name="example_name">Andi Saputra</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="example_gender">Laki - Laki</string>
    <string name="city">Tempat Lahir</string>
    <string name="example_city">Bogor</string>
    <string name="born">Tanggal Lahir</string>
    <string name="example_born">18 March 1996</string>
    <string name="example_faculty">Teknik Informatika</string>
    <string name="example_semester">Semester 8</string>
    <string name="telp">No. Telp</string>
    <string name="example_hp">089689665686</string>
    <string name="email">Email</string>
    <string name="example_email">andsptraa18@gmail.com</string>
    <string name="title_dashboard">Selamat Datang!</string>
    <string name="title_dashboard2">Aplikasi Exam CIC</string>
    <string name="logout">Log Out</string>
    <string name="profile_cic">Profile</string>
    <string name="prodi_cic">Program Studi</string>
    <string name="contact">Contact</string>
    <string name="cic_news">CIC News</string>
    <string name="enter_exam">Masuk Ujian</string>
    <string name="name_courses">Mata Kuliah</string>
    <string name="tv_date">Tanggal</string>
    <string name="tv_time">Waktu Ujian</string>
    <string name="hint_token">Input Token Ujian</string>
    <string name="text_btn_start">Mulai Ujian</string>
    <string name="nama">Nama</string>
    <string name="prodi">Program Studi</string>
    <string name="semester">Semester</string>
    <string name="example_soal">1. Apa yang dimaksud algoritma ?</string>
    <string name="contoh_jawaban">A. Jawaban yang pertama</string>
    <string name="contoh_jawaban2">B. Jawaban yang kedua</string>
    <string name="contoh_jawaban3">C. Jawaban yang ketiga</string>
    <string name="contoh_jawaban4">D. Jawaban yang keempat</string>
    <string name="example_soal_essay">Jelaskan fungsi dari RAM?</string>
    <string name="selesai_ujian">Selesai Ujian</string>
    <string name="input_jawaban">Input jawaban</string>
    <string name="ujian_anda_telah_selesai">Ujian Anda Telah Selesai</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
    <string name="stmik_cic_cirebon">STMIK CIC CIREBON</string>
    <string name="address">Address :</string>
    <string name="jl_kesambi_no_202_cirebon">Jl. Kesambi No. 202 Cirebon</string>
    <string name="phone">Phone :</string>
    <string name="_0231_200_418">(0231) 200-418</string>
    <string name="email2">Email :</string>
    <string name="info_cic_ac_id">info@cic.ac.id</string>
    <string name="menu_utama">Menu Utama</string>
</resources>
