<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context=".FormToken">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_cic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/logocic"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_cic"
        android:layout_marginTop="24dp"
        android:text="@string/name_courses"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_cic"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/tv_name"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_courses"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/tv_date"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_courses"
        android:layout_toEndOf="@id/tv_date"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/tv_time"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_toEndOf="@id/tv_time"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="24dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edt_token"
        android:background="@drawable/edt_token"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/time"
        android:layout_marginTop="32dp"
        android:inputType="text"
        android:hint="@string/hint_token"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_start_exam"
        android:background="@drawable/btn_start_exam"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/edt_token"
        android:layout_marginTop="32dp"
        android:text="@string/text_btn_start"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>