<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileStudent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:background="@drawable/background_profile"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="380dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/card"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_assignment_ind_black_24dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/nim"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nim"
                tools:ignore="LabelFor,TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_perm_identity_black_24dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_2"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/nama"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                tools:ignore="LabelFor,TextFields" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_school_black_24dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_6"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/prodi"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_prodi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faculty"
                tools:ignore="LabelFor,TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            tools:ignore="RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_check_black_24dp"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_7"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/semester"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/semester"
                tools:ignore="LabelFor,TextFields" />
        </RelativeLayout>

    </LinearLayout>

    <!--<Button-->
        <!--android:layout_width="143dp"-->
        <!--android:layout_height="44dp"-->
        <!--android:layout_marginBottom="32dp"-->
        <!--android:layout_marginEnd="32dp"-->
        <!--android:layout_marginStart="32dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:background="@drawable/btn_edit_profile"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="143dp"
        android:layout_height="143dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="false"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>